# ml-models-api

./: .gitignore  CollectionOfAntsTrails_collection_of_ants_trails.json  README.md  Trail_first_trail.json  Trail_last_trail.json  ant_colony_model.ipynb  draft.ipynb  draft.py  draft_plot.py  objects.py  pyproject.toml  pythagorean_support_machine_model.ipynb
draft/: TrailMatrix_chosen_trails.json  TrailMatrix_initial_matrix.json  TrailMatrix_updated_matrix.json  TrailMatrix_updated_pheromones.json  TrailMatrix_updated_probabilities.json  new_draft.ipynb  objects.py
draft/ant_colony/: draft.ipynb  draft.py  new_draft.ipynb
draft/pythagorean_support_machine/: centroids.json  distances.json  first_matrix.json  input.json  output.json  probabilities.json  pythagorian_support_machine.ipynb  result.json
src/: main.py
src/ant_colony_model/: ant_colony_model.py  objects.py  params.py  pheromone_updater.py  plots.py  probability_updater.py  trail_choser.py  trail_manager.py  utils.py
src/api/v1/: ant_colony_router.py  pythagorean_support_machine.py
src/contracts/: ant_colony_contracts.py
src/objects/: ant_colony_objects.py  pythagorean_support_machine_objects.py
src/params/: ant_colony_params.py
src/plots/: ant_colony_plots.py  pythagorean_support_machine_plots.py
src/services/ant_colony_model/: ant_colony_model.py  pheromone_updater.py  probability_updater.py  trail_choser.py  trail_manager.py  utils.py
src/services/pythagorean_support_machine_model/: centroid_updater.py  distances_updater.py  first_matrix_setter.py  groups_selector.py  probabilities_updater.py  utils.py  (+1 more)
src/utils/: debugg.py
