[project]
name = "ant-colony"
version = "0.1.0"
description = ""
authors = [
    {name = "Fantoni",email = "gfantoni@tractian.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "plotly (>=6.3.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "ant_colony", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
