[project]
name = "ml-models-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Fantoni",email = "gfantoni@tractian.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
