[project]
name = "src"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[tool.pytest.ini_options]
pythonpath = "."
